@@ -16,6 +16,7 @@ DIST grsecurity-sources-extras-4.9.64.tar.xz 2779744 SHA256 b10630c0dd3b9c89d446
 DIST grsecurity-sources-extras-4.9.65.tar.xz 2783720 SHA256 143441ab00ae67060294fc4463a7e0385a529740d41fabef686e030d171f3134 SHA512 b37526937ba13e8f68e01a580561c3d15ca717226b17f985478a1bbea90c5d0be614ecc0a0f8143732b83fb19315fdb9c11680d17c5888b8d550c73242cb8860 WHIRLPOOL 9fa2f3a1eab60964d894cbad25ddc0c50a65766c48641feeee31aedd382e33c65711b42805dc7b86af2e525b028345a8dd659edc8ef35912777802505087b802
 DIST grsecurity-sources-extras-4.9.67.tar.xz 2823248 SHA256 9625dfdfd3134b0024017c2febcecd0af50e4c8c507dc2e9cacaaf29cc53cb43 SHA512 cff73f6c6be07f1231719f827488ed86c2cc8ad032a9ee3fbc1846d49967a01a7119d3de81e4c86ae3a3baf67c4d027ca9b74f122348fa40ba2d4a227d06b6e8 WHIRLPOOL 333c58070c75f35d52e83dd9c293f17ab16c324b0ded5c4ae28258e0e4b90059bacb1756aa46c8be01586d9463ad3460555fb5eae61f5aa7535b0c7ee52db77d
 DIST grsecurity-sources-extras-4.9.68.tar.xz 2845624 SHA256 b92794fe0eed486cc52fd23a45107795be3375d47bba57dbba32b6a87adb71c7 SHA512 21b745a2ba5ba435197696b97128a0febba100022846db1412d3859a90f452f5c9251d8fc1f6674fdb9d28c28648e0b5d5a816bc37adaa61252b4ae23a0b5829 WHIRLPOOL 47ef9767b4c15c05c0bd40c67d235e3649ac27a69dbc7a977760dd188d8d92909fda9b225baa3a7a24e2999666e4474cfc4fd9c19d57f2ff2991503e3af28e0e
+DIST grsecurity-sources-extras-4.9.72.tar.xz 2941800 SHA256 bdf2c99a6bff38f1f03ec4bd98596786190e79d527f86ae2f6640d58b0857063 SHA512 653ce99d233763bb4b3e69737f3a92ea42c6cdca6cfde6ac19808a9a92afd9af4d17d33724c221ece921260aa6061bcdaf52a1830ec4d018d37de6476606312c WHIRLPOOL fe97784e83558fa6cd4494d9e7e561dd2d7f90cc7aff77c8f3dcbcd61db0d24cc0067deaaa4dad44dacbf779b66d562beeff6b3ffb821732cfaa1a53525a993a
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
@@ -32,21 +33,22 @@ EBUILD grsecurity-sources-4.9.64.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8
 EBUILD grsecurity-sources-4.9.65.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.67.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.68.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 3091 SHA256 bdba0ea14d4923243f6a27a16ca3f21977167ecfe80404695f4ac4b16f7770cf SHA512 d26d34ac34e6df382a730d9d0d8f30fd2d377b559e877d9fc751bfa711285b7abc2f01f33cbebb4f7c7ffd63ad11117eab91fabd8289750994dbbf7b0a6dbfa9 WHIRLPOOL 7cc95271ca8f211e153fcd48cb5a825e8868b639e5791878656499c545ecbcbc6443ec9c62c1e897d4755242aea2ed667aa4ea2fea6fba83c74928a528d93643
+EBUILD grsecurity-sources-4.9.72.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+MISC ChangeLog 3286 SHA256 995c061998a39f3632bc554eab3ef69c77b3314fe8c47b34d530ab48ef4af2be SHA512 9e3351c94737284ee5e956ae72e4eb088751b3c76b529139cb065b97a0d2daa4ca6d9d0227ad27c3096f50e0fa5eff0133e790d1c2d137b9a02ac9d377dac006 WHIRLPOOL cfe431b163ef4a5dba348962f9b9f5867d25cf096f5b0861a70e116d6a2d0a24453db665307b0cc9e7d38fbbeba8671554e039e9d33894a1d01b1dcfdac5f0af
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlourv0ACgkQunvTUHGU
-RZ8wSBAAlJeoPew7N931DKgU9ZLbXV2kl56kBTUMl2U/1fJvEq/O6oDk5JJdSbUS
-/CC5kaOZzOABxAfEeklsa9+yHn99fACstnc9yleubPwu5yXziFWPeNzykJB6JVJX
-lFh+jrFWpYPzJ4YF8OJuYK8Ww8Rx2vkWUoBvHH6jwFRZCpquFxeziD3SBttdumjH
-ehL8XmxIXhNomQ8CKOYDd4LruLjaII2DY3JcsRBQld6O9txytjsqEZXwgAbwUlnx
-f5Jl5rBu+v3xojFt54WVbKG0Ti+Fo0vncbsvm7pBTjnccQAchEnE0CXl87xRu6CP
-ArChIPveBu2lVVr4ykRzAaR1OM9MfmN9pFJhDEW+bUiPiN8PDC8xuO3VMOm1DXLf
-AQNMfHXeKs2yrXwpR5b7OTcdK3woGYUOgn7cZ+jOyhaj7BW66fivs7oqhOQiEutc
-rKuUEwDs+l9809uuJPbPEvpEK8pbWIaOjFxhKcNy0ViO/9GuSqqBKTib/t6hJihO
-6duKut7AqThkipk/y+uMrWNkDHS2qB+9xOiSJz+EYRnRwkCpH+jE9oy6ukM6WMYt
-yhC+CQrvDJkGWkWdpCyG0NdsSBdgvHiP9tuXXmpgOtL7LlNRs0aWgz939sGrB9Ca
-IEOHAyDMvSMD+aSRLCLIAO4FgdmKeUCrreUvxnV4dofOX5tdee8=
-=uKXu
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlpEseEACgkQunvTUHGU
+RZ9S2hAAo9zyBkRXHbwg35AAqc7kog77XzklEu0vf1Bgzfqyldw1b0SrocJNtwrA
+s+323gxI1BRGnhiWH0pj0S7P2h9A4h/otstIRKZhJ1X9MBXNvroRSC+zhjrv4Gp9
+qQwTFxd0hmgINY8sr/mMy/vWW1i6nT9ref26b3Ni9Pd1/p27eEHzRuE+1RNOxXSU
+60xZjrXMgffcmcgwGb0/3BCXg3vzTLKC5oaWL7wmjBg+LiYbFBqSY/b2ai7uBRUX
+fJde56Vru6tp0uvoInOYBU21F+0Rz2smdpF70inybAqsJKxzxcK/N/HIySEC5oNn
+WTgWeYrMjZCm2fGJdDB+3ZE69b7bjzRzHyK2XM66nTEjxtCI9vjlnejrUFG7hhHd
+2ZFE/U2GfYsHspyJ3VW3ShBQK5PXtxwjCHoXfpVxFon3W1fRjJv8vgE01H3dvv/A
+XDv1qg+0bLxXb0Yv3UY/CLSZNe3rcz2iYbzO0xPm1ohVqJfgWt1cs4SOb7gxcIc9
+b6+dvkIkRfSbWqnecz9RcbSdM2t8leJqOUz8Sfm2wemM8Wg6E3csQP1/By+G0C02
+DlJJ4ZhMtEAjLkAvD9pRweNeuUF1STy55YA7V4Xb2elmoADxRyompcuMIWBDAEw3
+Hu5oABHVIdwZWImkTkQXRuHIYiPdcP7PDO3IRloygfWRMYfk2nY=
+=bKVL
 -----END PGP SIGNATURE-----
